--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@vis.gl/react-google-maps": "^1.5.2",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.11.0",
+    "mysql2": "^3.14.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
