--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
