--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,13 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@vis.gl/react-google-maps": "^1.5.2",
+    "lucide-react": "^0.487.0",
+    "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-map-gl": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-map-gl": "^6.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
